<resources>
    <string name="app_name">Laboratorio 02 - Calculadora BMI</string>
    <string name="weight_text">Weight</string>
    <string name="kg_text">Kg</string>
    <string name="bmi_text">BMI</string>
    <string name="calculate_text">Calculate</string>
    <string name="height_text">Height</string>
    <string name="_0">0</string>
    <string name="_0_text">0</string>
    <string name="cm_text">cm</string>
    <string name="status_text">Status</string>
    <string name="weight_range_text">(normal weight range is 18.5 - 24.9)</string>
    <string name="_0_text3">0</string>
</resources>